--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html {
 
 body {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    background-color: #000;
+    background-color: lightblue;
     padding-top: 10%;
     background: -webkit-linear-gradient(left,bottom,rgb(121,150,137),rgb(55,68,110));
 }
@@ -41,7 +41,7 @@ body {
 }
 
 .card-container .title-wrapper {
-    background-color: #fff;
+    background-image: linear-gradient(to right,#d4fc79,#96e6a1);
     border-radius: 0 0 50px 50px;
 }
 
